--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,7 @@ jobs:
         script: |
           cd /home/backend/Amaris_backend
           sudo chmod +x deploy.sh
+          sudo mkdir -p /home/backend/backups
+          sudo chown -R $USER:$USER /home/backend/backups
           bash deploy.sh
           
